[project]
name = "openhost-openweb-ui-tests"
version = "0.1.0"
description = "Tests for the OpenHost Open WebUI deployment"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "openhost-test-harness @ git+https://github.com/imbue-openhost/openhost-app-test-harness@main",
    "pytest>=8.0",
    "playwright>=1.49",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# This repo ships a container app, not a Python package; only the tests are Python.
[tool.uv]
package = false
